new success page

--- a/success.html
+++ b/success.html
@@ -16,7 +16,7 @@
 
     <div class="alert alert-success" role="alert">
         <h4 class="alert-heading">You have a success subscription</h4>
-        <p>Well none</p>
+        <p>Ansome _ You'r Done</p>
         <hr>
         <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
     </div>
